RESOLVED FIXED125332
Hook into some shader symbol logic following the ANGLE update in r159533
https://bugs.webkit.org/show_bug.cgi?id=125332
Summary Hook into some shader symbol logic following the ANGLE update in r159533
Roger Fong
Reported 2013-12-05 20:31:09 PST
In order to fix conformance/glsl/misc/shader-with-global-variable-precision-mismatch.html and conformance/glsl/misc/shaders-with-varyings.html we need to first hook into some new shader symbol fields provided by the angle update in r159533. We also need to start taking varyings into consideration as a symbol type. Fixes for the actual conformance failures will come in a different patch.
Attachments
Patch (8.95 KB, patch)
2013-12-05 21:04 PST, Roger Fong
no flags
Roger Fong
Comment 1 2013-12-05 21:04:29 PST
WebKit Commit Bot
Comment 2 2013-12-05 21:06:07 PST
Attachment 218567 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/canvas/WebGLRenderingContext.cpp', u'Source/WebCore/platform/graphics/ANGLEWebKitBridge.cpp', u'Source/WebCore/platform/graphics/ANGLEWebKitBridge.h', u'Source/WebCore/platform/graphics/GraphicsContext3D.h', u'Source/WebCore/platform/graphics/opengl/Extensions3DOpenGLCommon.cpp', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:49: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:50: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] Total errors found: 18 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3 2013-12-06 08:55:26 PST
(In reply to comment #2) > Attachment 218567 [details] did not pass style-queue: > > ERROR: Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:49: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] > ERROR: Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:50: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Looks like these are to match existing WebGL declarations. > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] [...] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:329: Comma should be at the beggining of the line in a member initialization list. [whitespace/init] [4] Something is very wrong with check-webkit-style here. I don't even see how the patch could generate these complaints about this section of the code.
Brent Fulgham
Comment 4 2013-12-06 08:57:07 PST
Comment on attachment 218567 [details] Patch Looks great to me! r=me.
WebKit Commit Bot
Comment 5 2013-12-06 09:25:54 PST
Comment on attachment 218567 [details] Patch Clearing flags on attachment: 218567 Committed r160223: <http://trac.webkit.org/changeset/160223>
WebKit Commit Bot
Comment 6 2013-12-06 09:25:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.